--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.GerenciadorDeMatriculas" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.GerenciadorDeMatriculas" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+
+<!--        "Theme.MaterialComponents.DayNight.DarkActionBar"-->
+
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
