--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -5,11 +5,11 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">32dp</item>
+        <item name="android:padding">8dp</item>
         <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_gravity">center_horizontal</item>
-
     </style>
 
     <style name="EditText">
@@ -25,7 +25,21 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
-
     </style>
+
+    <style name="CardTextNormal" >
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CardTextDo" parent="CardTextNormal">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+
+
 
 </resources>
