Implementação: Adição de nova variavel de cor

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFF</color>
     <color name="greenLight">#08AD7F</color>
     <color name="grayLight">#DADADA</color>
+    <color name="blue">#0A84FD</color>
 
 </resources>
