--- a/app/src/main/res/layout/card_model.xml
+++ b/app/src/main/res/layout/card_model.xml
@@ -1,20 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
     android:orientation="vertical">
 
-
-    <TextView
-        android:id="@+id/card_model"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dev Android in progress"
-        android:textSize="24sp"
-        />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/blue">
 
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp">
 
+            <TextView
+                android:id="@+id/textName"
+                style="@style/CardTextNormal"
+                android:text="@string/textCardName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textDoName"
+                style="@style/CardTextDo"
+                android:text="@string/name"
+                app:layout_constraintStart_toEndOf="@id/textName"
+                app:layout_constraintTop_toTopOf="@id/textName" />
+
+            <TextView
+                android:id="@+id/textSport"
+                style="@style/CardTextNormal"
+                android:text="@string/textCardSport"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textName" />
+
+            <TextView
+                android:id="@+id/textDoSport"
+                style="@style/CardTextDo"
+                android:text="@string/sport"
+                app:layout_constraintStart_toEndOf="@id/textSport"
+                app:layout_constraintTop_toTopOf="@id/textSport" />
+
+            <TextView
+                android:id="@+id/textDay"
+                style="@style/CardTextNormal"
+                android:text="@string/textCardDay"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textSport" />
+
+            <TextView
+                android:id="@+id/textDoDay"
+                style="@style/CardTextDo"
+                android:text="@string/day"
+                app:layout_constraintStart_toEndOf="@id/textDay"
+                app:layout_constraintTop_toTopOf="@id/textDay" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
