--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,7 +7,7 @@
         <item name="android:layout_margin">32dp</item>
         <item name="android:padding">8dp</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
@@ -20,11 +20,12 @@
         <item name="android:padding">8dp</item>
     </style>
 
-    <style name="Buttons">
+    <style name="Buttons" >
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:backgroundTint">@color/greenLight</item>
     </style>
 
     <style name="CardTextNormal" >
