--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -25,7 +25,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:backgroundTint">@color/greenLight</item>
+        <item name="android:backgroundTint">@color/purple</item>
     </style>
 
     <style name="CardTextNormal" >
