--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFF</color>
-    <color name="greenLight">#08AD7F</color>
+    <color name="purple">#5E35B1</color>
     <color name="grayLight">#DADADA</color>
     <color name="blue">#0A84FD</color>
+    <color name="blueLight">#42A5F5</color>
 
 </resources>
