--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,26 @@
     android:padding="8dp"
     tools:context=".screens.MainActivity">
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints">
+<!--        TODO - Implementar ->  -->
+<!-- Fazer um texview para que pegue a quantidade total de alunos registrados
+e mostrar na parte superior da tela  -->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="lorem ipsum: DOlor usd money sad mood by "
+            android:textSize="22sp"
+            />
+
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerList"
@@ -16,17 +36,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/linearLayout" />
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnScreenAdd"
+        android:src="@drawable/ic_person_add"
         style="@style/Buttons"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"/>
+
+<!--    Fazer com que o button fique quadrado-->
+    <!--        app:shapeAppearanceOverlay="@style/Widget.MaterialComponents.FloatingActionButton"-->
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
