--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="blue">#0A84FD</color>
     <color name="blueLight">#42A5F5</color>
     <color name="green">#43A047</color>
+    <color name="red">#DF0505</color>
     <color name="Darkgray">#535157</color>
 
 </resources>
