--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.GerenciadorDeMatriculas" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.GerenciadorDeMatriculas" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-
 <!--        "Theme.MaterialComponents.DayNight.DarkActionBar"-->
-
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+          <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.GerenciadorDeMatriculas" parent="Base.Theme.GerenciadorDeMatriculas" />
