--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -15,6 +15,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">8dp</item>
+        <item name="android:textColorHint">@color/Darkgray</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:background">@color/white</item>
         <item name="android:padding">8dp</item>
     </style>
