--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -9,10 +9,34 @@
     android:orientation="vertical"
     tools:context=".view.AddActivity">
 
-    <TextView
-        android:id="@+id/textRegister"
-        style="@style/TextTitles"
-        android:text="@string/textUpdate" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="center">
+
+    <ImageView
+        android:id="@+id/iconBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_back"
+
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/textRegister"
+        app:layout_constraintEnd_toStartOf="@id/textRegister"
+        app:layout_constraintTop_toTopOf="@id/textRegister" />
+
+        <TextView
+            android:id="@+id/textRegister"
+            style="@style/TextTitles"
+            android:text="@string/textUpdate"
+            app:layout_constraintStart_toEndOf="@id/iconBack"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <EditText
