--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,15 @@
     <color name="red">#DF0505</color>
     <color name="grayLight">#DADADA</color>
     <color name="Darkgray">#767577</color>
-    <color name="newColor">#f4ffff</color>
 
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#6462a3</color>
+    <color name="purple_700">#3b3a61</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="pink">#f33769</color>
+    <color name="grey_700">#FFFFFF</color>
+    <color name="grey_500">#c1c1c1</color>
+    <color name="grey_200">#535353</color>
 
 </resources>
